--- a/test_pixel/maps_threshold.html
+++ b/test_pixel/maps_threshold.html
@@ -97,7 +97,11 @@
                 canvas_setup: function(canvas, coord, zoom) {
                   var image = new Image();  
                   var ctx = canvas.getContext('2d');
-                  image.src = "/env/z" + zoom + "/"+ coord.x + "/" + coord.y +".png";
+
+                  //image.src = 'http://earthengine.googleapis.com/map/6c3a7801be27c267a6d81fe88008e9ad/' + zoom +'/' + coord.x'/' + coord.y +'?token=d8efcb9bd7c3bdaad50fabfd2dd405cc'
+                  //image.src = "/env/z" + zoom + "/"+ coord.x + "/" + coord.y +".png";
+                  image.src = "/map/6c3a7801be27c267a6d81fe88008e9ad/" + zoom + "/"+ coord.x + "/" + coord.y +"?token=d8efcb9bd7c3bdaad50fabfd2dd405cc";
+            
                   canvas.image = image;
                   $(image).load(function() { 
                         //ctx.globalAlpha = 0.5;
